--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,7 @@ html {
 }
 
 .background-image {
+  border-radius: 0 0 32px 32px;
   width: 100%;
   display: flex;
   height: 196px;
@@ -85,3 +86,5 @@ html {
   font-size: 11px;
   text-align: center;
 }
+
+
